# LMS-coding-platform

./: .env.example  .gitignore  README.md  docker-compose.yaml  lms.code-workspace
src/backend/auth-provider/: .env.example  README.md  main.py  pyproject.toml
src/backend/auth-provider/src/: app.py  db.py
src/backend/auth-provider/src/cores/: redis.py  settings.py  template.py
src/backend/auth-provider/src/helpers/: random.py
src/backend/auth-provider/src/models/: role_model.py  user_model.py
src/backend/auth-provider/src/templates/: login.html
src/backend/business-application/: .env.example  README.md  main.py  pyproject.toml
src/backend/business-application/alembic/: env.py
src/backend/business-application/alembic/versions/: 396427f5b0ea_initial_migration.py  597a2814d650_update_nullalble_in_database.py  7c1fbcfb7f0f_update_database_schema.py  e3c99d83f939_update_user_table_with_active_column.py
src/backend/business-application/src/: app.py  db.py  jwk_service.py
src/backend/business-application/src/cores/: settings.py
src/backend/business-application/src/helper/: pwd_hash.py
src/backend/business-application/src/models/: __init__.py  audit_log_model.py  base_model.py  comment_model.py  course_model.py  enrollment_model.py  interview_message_model.py  interview_report_model.py  interview_session_model.py  language_model.py  lesson_content_model.py  lesson_content_progress_model.py  lesson_model.py  notification_model.py  problem_config_model.py  problem_model.py  problem_tag_model.py  quiz_enrollment_model.py  quiz_model.py  quiz_option_model.py  (+14 more)
(+28 files in other folders)
