[project]
name = "auth-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.50.2",
]
